--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/node": "22.10.1",
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
+    "eslint": "^9.21.0",
     "prettier": "3.4.2"
   }
 }
